# niplock

./: .orange-touch.txt  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy-github-pages.yml
.nsite/: config.json
.planning/: INSTRUCTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TODO.md
deploy/nginx/: nsyte.run.conf
public/: manifest.webmanifest
scripts/: build-web.sh  deploy-web-ssh.sh
src/: app.rs  lib.rs  main.rs  model.rs  nostr_sync.rs  store.rs  ui.rs
