[package]
name = "passwd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dirs = "6.0.0"
nostr-sdk = { version = "0.44.1", features = ["all-nips"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
